--- a/net/home/Desktop/startpage/css/util.css
+++ b/net/home/Desktop/startpage/css/util.css
@@ -15,7 +15,7 @@ body {
   height: 100%;
   display: block;
   overflow: hidden;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .hidden {
