--- a/net/home/Desktop/startpage/css/homepage.css
+++ b/net/home/Desktop/startpage/css/homepage.css
@@ -16,7 +16,7 @@
 }
 
 body{
-	background: #1C2023;
+	background: #343d46;
 	padding-top: 12%;
 	font-size: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -101,7 +101,7 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #1C2023;
+	background: #343d46;
 	color: #C7CCD1;
 	border: 1px solid #c0c5ce;
 }
@@ -118,7 +118,7 @@ form{
 .go{
 	height: 26px;
 	width: 40px;
-	background: #1C2023;
+	background: #343d46;
 	color: #C7CCD1;
 	border: 1px solid #C7CCD1;
 }
