--- a/net/home/Desktop/startpage/css/homepage.css
+++ b/net/home/Desktop/startpage/css/homepage.css
@@ -28,7 +28,7 @@ body{
 
 p, li, a{
 	color: #c0c5ce;
-	font-family: Lato, Consolas;
+	font-family: DejaVuSansMono, Lato, Consolas;
 	font-weight: 300;
 	letter-spacing:2px;
 }
