--- a/net/home/Desktop/startpage/css/homepage.css
+++ b/net/home/Desktop/startpage/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background: #343d46;
+	background: #151515;
 	padding-top: 12%;
 	font-size: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -28,7 +28,7 @@ body{
 }
 
 p, li, a{
-	color: #c0c5ce;
+	color: #d0d0d0;
 	font-family: Lato, Consolas;
 	font-weight: 300;
 	letter-spacing:2px;
@@ -44,7 +44,7 @@ p, li, a{
 }
 
 .favorites p{
-	border-bottom: 1px solid #C7CCD1;
+	border-bottom: 1px solid #505050;
 	padding-right: 100%;
 }
 
@@ -66,8 +66,8 @@ a{
 }
 
 a:hover{
-	color: #1C2023;
-	background: #C7CCD1;
+	color: #d0d0d0;
+	background: #505050;
 }
 
 /*
@@ -83,7 +83,7 @@ a:hover{
 	display: inline-block;
 	width: 18%;
 	margin: 10px 10px;
-	border: 1px solid #c0c5ce;
+	border: 1px solid #505050;
 }
 	
 /*
@@ -102,31 +102,31 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #343d46;
-	color: #C7CCD1;
-	border: 1px solid #c0c5ce;
+	background: #151515;
+	color: #d0d0d0;
+	border: 1px solid #505050;
 }
 
 .search:hover{
-	border: 1px solid #666;
+	border: 1px solid #d0d0d0;
 }
 
 .search:focus{
 	outline: none;
-	border: 1px solid #c0c5ce;
+	border: 1px solid #505050;
 }
 
 .go{
 	height: 26px;
 	width: 40px;
-	background: #343d46;
-	color: #C7CCD1;
-	border: 1px solid #C7CCD1;
+	background: #151515;
+	color: #d0d0d0;
+	border: 1px solid #505050;
 }
 
 .go:hover{
-	background: #C7CCD1;
-	color: #1C2023;
+	background: #505050;
+	color: #f5f5f5;
 	cursor: pointer;
 }
 
