--- a/net/home/Desktop/startpage/css/homepage.css
+++ b/net/home/Desktop/startpage/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background: #252525;
+	background: #343d46;
 	padding-top: 12%;
 	font-size: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -66,8 +66,8 @@ a{
 }
 
 a:hover{
-	color: #d0d0d0;
-	background: #505050;
+	color: #f5f5f5;
+	background: #65737e;
 }
 
 /*
@@ -102,7 +102,7 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #252525;
+	background: #343d46;
 	color: #d0d0d0;
 	border: 1px solid #505050;
 }
@@ -119,13 +119,13 @@ form{
 .go{
 	height: 26px;
 	width: 40px;
-	background: #252525;
+	background: #343d46;
 	color: #d0d0d0;
 	border: 1px solid #505050;
 }
 
 .go:hover{
-	background: #505050;
+	background: #65737e;
 	color: #f5f5f5;
 	cursor: pointer;
 }
