--- a/net/home/Desktop/startpage/css/homepage.css
+++ b/net/home/Desktop/startpage/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background: #343d46;
+	background: #393939;
 	padding-top: 12%;
 	font-size: 10px;
 	-webkit-font-smoothing: antialiased;
@@ -102,7 +102,7 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #343d46;
+	background: #393939;
 	color: #d0d0d0;
 	border: 1px solid #505050;
 }
@@ -119,7 +119,7 @@ form{
 .go{
 	height: 26px;
 	width: 40px;
-	background: #343d46;
+	background: #393939;
 	color: #d0d0d0;
 	border: 1px solid #505050;
 }
