--- a/open/home/Desktop/startpage/css/homepage.css
+++ b/open/home/Desktop/startpage/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background: #506070;
+	background: #5F8787;
 	padding-top: 12%;
 	font-size: 11px;
 	-webkit-font-smoothing: antialiased;
@@ -44,7 +44,7 @@ p, li, a{
 }
 
 .favorites p{
-	border-bottom: 1px solid #505050;
+	border-bottom: 1px solid #c2c2b0;
 	padding-right: 100%;
 }
 
@@ -67,7 +67,7 @@ a{
 
 a:hover{
 	color: #f5f5f5;
-	background: #65737e;
+	background: #c2c2b0;
 }
 
 /*
@@ -83,7 +83,7 @@ a:hover{
 	display: inline-block;
 	width: 18%;
 	margin: 10px 10px;
-	border: 1px solid #505050;
+	border: 1px solid #c2c2b0;
 }
 	
 /*
@@ -102,9 +102,9 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #506070;
+	background: #5F8787;
 	color: #d0d0d0;
-	border: 1px solid #505050;
+	border: 1px solid #c2c2b0;
 }
 
 .search:hover{
@@ -113,15 +113,15 @@ form{
 
 .search:focus{
 	outline: none;
-	border: 1px solid #505050;
+	border: 1px solid #c2c2b0;
 }
 
 .go{
 	height: 26px;
 	width: 40px;
-	background: #506070;
+	background: #5F8787;
 	color: #d0d0d0;
-	border: 1px solid #505050;
+	border: 1px solid #c2c2b0;
 }
 
 .go:hover{
