--- a/open/home/Desktop/startpage/css/homepage.css
+++ b/open/home/Desktop/startpage/css/homepage.css
@@ -17,7 +17,7 @@
 }
 
 body{
-	background: #121212;
+	background: #282a36;
 	padding-top: 12%;
 	font-size: 11px;
 	-webkit-font-smoothing: antialiased;
@@ -102,8 +102,8 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #121212;
-	color: #d0d0d0;
+	background: #282a36;
+	color: #f8f8f2;
 	border: 1px solid #c2c2b0;
 }
 
@@ -119,14 +119,14 @@ form{
 .go{
 	height: 26px;
 	width: 40px;
-	background: #121212;
+	background: #282a36;
 	color: #d0d0d0;
 	border: 1px solid #c2c2b0;
 }
 
 .go:hover{
-	background: #5F8787;
-	color: #f5f5f5;
+	background: #6272a4;
+	color: #f8f8f2;
 	cursor: pointer;
 }
 
