--- a/open/home/Desktop/startpage/css/homepage.css
+++ b/open/home/Desktop/startpage/css/homepage.css
@@ -102,7 +102,7 @@ form{
 	height: 20px;
 	margin-right: -4px;
 	padding: 2px 0px 2px 5px;
-	background: #282a36;
+	background: #3C4556;
 	color: #f8f8f2;
 	border: 1px solid #c2c2b0;
 }
@@ -119,7 +119,7 @@ form{
 .go{
 	height: 26px;
 	width: 40px;
-	background: #282a36;
+	background: #3C4556;
 	color: #d0d0d0;
 	border: 1px solid #c2c2b0;
 }
